--- a/index.html
+++ b/index.html
@@ -4,48 +4,41 @@
   <meta charset="UTF-8">
   <title>Cosmic Pressure and Containment</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; line-height: 1.6; }
-    header { text-align: center; margin-bottom: 40px; }
-    h1 { margin-bottom: 10px; }
+    body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; }
+    nav { background: #f2f2f2; padding: 10px; text-align: center; margin-bottom: 20px; }
+    nav a { margin: 0 10px; text-decoration: none; color: #333; font-weight: bold; }
     .button {
       display: inline-block;
       padding: 12px 20px;
-      margin: 20px 0;
       background-color: #4285F4;
       color: white;
       text-decoration: none;
-      font-weight: bold;
       border-radius: 4px;
+      margin-top: 20px;
     }
-    .contact { margin-top: 40px; font-style: italic; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Cosmic Pressure and Containment</h1>
-    <p><strong>Author:</strong> Usman Madni</p>
-  </header>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="urdu.html">اردو</a> |
+    <a href="https://doi.org/10.5281/zenodo.15828369" target="_blank">PDF</a> |
+    <a href="mailto:madniusman13@gmail.com">Contact</a>
+  </nav>
 
-  <section>
-    <h2>Abstract</h2>
-    <p>
-      This paper introduces the Cosmic Pressure and Containment (CPC) theory: a conceptual model
-      suggesting that the universe maintains its structure through internal cosmic pressure balanced
-      by an external containment field. The theory challenges the gravity-exclusive model by proposing
-      that cosmic structure and motion may instead result from internal pressure dynamics restrained by
-      cosmic boundaries or “containment walls.” It explores alternative perspectives on planetary orbits,
-      light bending, and structural equilibrium in space, using analogies from architecture and fluid systems.
-    </p>
-  </section>
+  <h1>Cosmic Pressure and Containment</h1>
+  <p><strong>Author:</strong> Usman Madni</p>
 
-  <section>
-    <a class="button" href="https://doi.org/10.5281/zenodo.15828369" target="_blank">
-      📄 Download PDF
-    </a>
-  </section>
+  <h2>Abstract</h2>
+  <p>
+    This paper introduces the Cosmic Pressure and Containment (CPC) theory: a conceptual model
+    suggesting that the universe maintains its structure through internal cosmic pressure balanced
+    by an external containment field. The theory challenges the gravity-exclusive model by proposing
+    that cosmic structure and motion may instead result from internal pressure dynamics restrained by
+    cosmic boundaries or “containment walls.” It explores alternative perspectives on planetary orbits,
+    light bending, and structural equilibrium in space, using analogies from architecture and fluid systems.
+  </p>
 
-  <footer class="contact">
-    <p>Contact: <a href="mailto:madniusman13@gmail.com">madniusman13@gmail.com</a></p>
-  </footer>
+  <a class="button" href="https://doi.org/10.5281/zenodo.15828369" target="_blank">📄 Download PDF</a>
 </body>
 </html>
