--- a/urdu.html
+++ b/urdu.html
@@ -36,4 +36,124 @@
 
   <a class="button" href="https://doi.org/10.5281/zenodo.15828369" target="_blank">📄 پی ڈی ایف ڈاؤن لوڈ کریں</a>
 </body>
+  <!DOCTYPE html>
+<html lang="ur" dir="rtl">
+<head>
+    <meta charset="UTF-8" />
+    <title>کائناتی دباؤ اور گھیراؤ</title>
+    <style>
+        body {
+            font-family: "Noto Nastaliq Urdu", serif;
+            background-color: #0a0a1a;
+            color: #eee;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #f0a500;
+        }
+        a {
+            color: #00ffff;
+            font-size: 1.1em;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .urdu {
+            direction: rtl;
+            text-align: right;
+            font-size: 1.2em;
+        }
+        .eng {
+            direction: ltr;
+            text-align: left;
+            font-size: 1em;
+            color: #ccc;
+            margin-bottom: 15px;
+        }
+    </style>
+</head>
+<body>
+
+<!-- 🔗 Home link -->
+<p><a href="index.html">🏠 واپس ہوم پیج پر</a></p>
+
+<h1>کائناتی دباؤ اور گھیراؤ: ایک مفروضاتی خاکہ</h1>
+<p>Usman Madni / عثمان مدنی<br/>
+آزاد محقق، پاکستان<br/>
+Email: madniusman13@gmail.com<br/>
+© 2025 Usman Madni. All rights reserved.</p>
+
+<img src="images/d65228bd-7717-44f3-b988-ad2c80e550fa.png" alt="Cosmic Pressure and Containment Diagram" />
+
+<div class="section">
+    <div class="eng"><strong>Abstract</strong><br/>
+    This paper introduces the Cosmic Pressure and Containment (CPC) theory...</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    یہ مقالہ 'کائناتی دباؤ اور گھیراؤ' (CPC) کے نظریے کو پیش کرتا ہے...</div>
+</div>
+
+<div class="section">
+    <div class="eng"><strong>1. Introduction</strong><br/>
+    Modern cosmology largely attributes cosmic structure...</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    روایتی فلکیات کے مطابق کائنات کی ساخت...</div>
+</div>
+
+<div class="section">
+    <div class="eng"><strong>2. The Cosmic Rupture</strong><br/>
+    If the internal pressure exceeds the containment capacity...</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    اگر اندرونی دباؤ بیرونی قوتِ گھیراؤ سے بڑھ جائے...</div>
+</div>
+
+<div class="section">
+    <div class="eng"><strong>3. First Effect: Ocean</strong><br/>
+    Earth’s oceans will be the first to respond...</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    زمین کے سمندر سب سے پہلے ردعمل دیں گے...</div>
+</div>
+
+<div class="section">
+    <div class="eng"><strong>4. Suspended Objects</strong><br/>
+    Space bodies are suspended not just by gravity...</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    خلا میں اجسام صرف کششِ ثقل سے نہیں...</div>
+</div>
+
+<div class="section">
+    <div class="eng"><strong>5. Light and Pressure</strong><br/>
+    Light is influenced by cosmic pressure...</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    روشنی پر کائناتی دباؤ اثر انداز ہوتا ہے...</div>
+</div>
+
+<div class="section">
+    <div class="eng"><strong>6. Equations and Diagram</strong><br/>
+    Pc = Fc<br/>
+    R(t) ∝ √(Pc - Fc)</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    Pc = Fc<br/>
+    R(t) ∝ √(Pc - Fc)</div>
+</div>
+
+<div class="section">
+    <div class="eng"><strong>7. Conclusion</strong><br/>
+    CPC theory offers a pressure-based view...</div>
+    <div class="urdu"><strong>ترجمہ</strong><br/>
+    CPC نظریہ کائنات کا ایک دباؤ پر مبنی نکتہ نظر پیش کرتا ہے...</div>
+</div>
+
+<!-- 🔗 واپس ہوم پر -->
+<p><a href="index.html">🏠 واپس ہوم پیج پر</a></p>
+
+</body>
+</html>
+
 </html>
