--- a/urdu.html
+++ b/urdu.html
@@ -17,30 +17,43 @@
       margin-top: 20px;
     }
   </style>
-</head>
-<body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="urdu.html">اردو</a> |
-    <a href="https://doi.org/10.5281/zenodo.15828369" target="_blank">PDF</a> |
-    <a href="mailto:madniusman13@gmail.com">رابطہ</a>
-  </nav>
+<style>
+    body {
+        font-family: "Noto Nastaliq Urdu", serif;
+        background-color: #0a0a1a;
+        color: #eee;
+        padding: 20px;
+        line-height: 1.6;
+    }
+    h1, h2 {
+        color: #f0a500;
+    }
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 20px auto;
+    }
+    .section {
+        margin-bottom: 30px;
+    }
+    .urdu {
+        direction: rtl;
+        text-align: right;
+        font-size: 1.2em;
+        white-space: normal;
+        overflow: visible;
+        display: block;
+    }
+    .eng {
+        direction: ltr;
+        text-align: left;
+        font-size: 1em;
+        color: #ccc;
+        margin-bottom: 15px;
+    }
+</style>
 
-  <h1>کائناتی دباؤ اور گھیراؤ</h1>
-  <p><strong>مصنف:</strong> عثمان مدنی</p>
-
-  <h2>خلاصہ</h2>
-  <p>
-    یہ مقالہ "کائناتی دباؤ اور گھیراؤ" (Cosmic Pressure and Containment) نامی نظریہ پیش کرتا ہے جو کائنات کی ساخت کو اندرونی دباؤ اور بیرونی گھیراؤ کے توازن سے برقرار سمجھتا ہے۔ یہ نظریہ کششِ ثقل پر مبنی موجودہ ماڈل کو چیلنج کرتا ہے اور تجویز کرتا ہے کہ سیاروں کی حرکت، روشنی کا مڑنا، اور کائناتی توازن دراصل اندرونی دباؤ کی قوتوں اور اس پر عائد کردہ بیرونی حدود کے سبب ہوتا ہے۔ اس نظریہ میں تعمیراتی اور سیال نظاموں سے تشبیہات دی گئی ہیں۔
-  </p>
-
-  <a class="button" href="https://doi.org/10.5281/zenodo.15828369" target="_blank">📄 پی ڈی ایف ڈاؤن لوڈ کریں</a>
-</body>
-  <!DOCTYPE html>
-<html lang="ur" dir="rtl">
-<head>
-    <meta charset="UTF-8" />
-    <title>کائناتی دباؤ اور گھیراؤ</title>
     <style>
         body {
             font-family: "Noto Nastaliq Urdu", serif;
