--- a/urdu.html
+++ b/urdu.html
@@ -1,59 +1,8 @@
 <!DOCTYPE html>
 <html lang="ur" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>کائناتی دباؤ اور گھیراؤ</title>
-  <style>
-    body { font-family: 'Noto Nastaliq Urdu', 'Jameel Noori Nastaleeq', serif; max-width: 800px; margin: auto; padding: 20px; }
-    nav { background: #f2f2f2; padding: 10px; text-align: center; margin-bottom: 20px; direction: ltr; }
-    nav a { margin: 0 10px; text-decoration: none; color: #333; font-weight: bold; }
-    .button {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: #4285F4;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      margin-top: 20px;
-    }
-  </style>
-<style>
-    body {
-        font-family: "Noto Nastaliq Urdu", serif;
-        background-color: #0a0a1a;
-        color: #eee;
-        padding: 20px;
-        line-height: 1.6;
-    }
-    h1, h2 {
-        color: #f0a500;
-    }
-    img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: 20px auto;
-    }
-    .section {
-        margin-bottom: 30px;
-    }
-    .urdu {
-        direction: rtl;
-        text-align: right;
-        font-size: 1.2em;
-        white-space: normal;
-        overflow: visible;
-        display: block;
-    }
-    .eng {
-        direction: ltr;
-        text-align: left;
-        font-size: 1em;
-        color: #ccc;
-        margin-bottom: 15px;
-    }
-</style>
-
+    <meta charset="UTF-8" />
+    <title>کائناتی دباؤ اور گھیراؤ</title>
     <style>
         body {
             font-family: "Noto Nastaliq Urdu", serif;
@@ -64,10 +13,6 @@
         }
         h1, h2 {
             color: #f0a500;
-        }
-        a {
-            color: #00ffff;
-            font-size: 1.1em;
         }
         img {
             max-width: 100%;
@@ -82,6 +27,9 @@
             direction: rtl;
             text-align: right;
             font-size: 1.2em;
+            white-space: normal;
+            overflow: visible;
+            display: block;
         }
         .eng {
             direction: ltr;
@@ -90,11 +38,14 @@
             color: #ccc;
             margin-bottom: 15px;
         }
+        a {
+            color: #00ffff;
+            font-size: 1.1em;
+        }
     </style>
 </head>
 <body>
 
-<!-- 🔗 Home link -->
 <p><a href="index.html">🏠 واپس ہوم پیج پر</a></p>
 
 <h1>کائناتی دباؤ اور گھیراؤ: ایک مفروضاتی خاکہ</h1>
@@ -107,44 +58,44 @@ Email: madniusman13@gmail.com<br/>
 
 <div class="section">
     <div class="eng"><strong>Abstract</strong><br/>
-    This paper introduces the Cosmic Pressure and Containment (CPC) theory...</div>
+    This paper introduces the Cosmic Pressure and Containment (CPC) theory, a conceptual model proposing that the universe maintains its structure through a balance of internal cosmic pressure and an external containment field.</div>
     <div class="urdu"><strong>ترجمہ</strong><br/>
-    یہ مقالہ 'کائناتی دباؤ اور گھیراؤ' (CPC) کے نظریے کو پیش کرتا ہے...</div>
+    یہ مقالہ 'کائناتی دباؤ اور گھیراؤ' (CPC) کے نظریے کو پیش کرتا ہے جو اس تصور پر مبنی ہے کہ کائنات اپنی ساخت کو اندرونی کائناتی دباؤ اور بیرونی گھیراؤ کی قوت کے توازن سے قائم رکھتی ہے۔</div>
 </div>
 
 <div class="section">
     <div class="eng"><strong>1. Introduction</strong><br/>
-    Modern cosmology largely attributes cosmic structure...</div>
+    Modern cosmology largely attributes cosmic structure and dynamics to gravitational forces. However, observational anomalies motivate alternative models.</div>
     <div class="urdu"><strong>ترجمہ</strong><br/>
-    روایتی فلکیات کے مطابق کائنات کی ساخت...</div>
+    روایتی فلکیات کے مطابق کائنات کی ساخت اور حرکت کششِ ثقل کے قوانین سے چلتی ہے۔ تاہم کچھ مشاہدات متبادل نظریات کی ضرورت ظاہر کرتے ہیں۔</div>
 </div>
 
 <div class="section">
     <div class="eng"><strong>2. The Cosmic Rupture</strong><br/>
-    If the internal pressure exceeds the containment capacity...</div>
+    If the internal pressure exceeds the containment capacity, a rupture may occur, dispersing stars and galaxies.</div>
     <div class="urdu"><strong>ترجمہ</strong><br/>
-    اگر اندرونی دباؤ بیرونی قوتِ گھیراؤ سے بڑھ جائے...</div>
+    اگر اندرونی دباؤ بیرونی قوتِ گھیراؤ سے بڑھ جائے تو ایک زوردار دھماکہ ہو سکتا ہے جو ستاروں اور کہکشاؤں کو بکھیر دے گا۔</div>
 </div>
 
 <div class="section">
     <div class="eng"><strong>3. First Effect: Ocean</strong><br/>
-    Earth’s oceans will be the first to respond...</div>
+    Earth’s oceans will be the first to respond due to their incompressible nature.</div>
     <div class="urdu"><strong>ترجمہ</strong><br/>
-    زمین کے سمندر سب سے پہلے ردعمل دیں گے...</div>
+    زمین کے سمندر سب سے پہلے ردعمل دیں گے کیونکہ پانی غیر سکڑنے والا ہے۔</div>
 </div>
 
 <div class="section">
     <div class="eng"><strong>4. Suspended Objects</strong><br/>
-    Space bodies are suspended not just by gravity...</div>
+    Space bodies are suspended not just by gravity but by a balance of cosmic pressure.</div>
     <div class="urdu"><strong>ترجمہ</strong><br/>
-    خلا میں اجسام صرف کششِ ثقل سے نہیں...</div>
+    خلا میں اجسام صرف کششِ ثقل سے نہیں بلکہ دباؤ کے توازن سے معلق ہوتے ہیں۔</div>
 </div>
 
 <div class="section">
     <div class="eng"><strong>5. Light and Pressure</strong><br/>
-    Light is influenced by cosmic pressure...</div>
+    Light is influenced by cosmic pressure; its speed and path are not constant.</div>
     <div class="urdu"><strong>ترجمہ</strong><br/>
-    روشنی پر کائناتی دباؤ اثر انداز ہوتا ہے...</div>
+    روشنی پر کائناتی دباؤ اثر انداز ہوتا ہے؛ اس کی رفتار اور سمت مستقل نہیں۔</div>
 </div>
 
 <div class="section">
@@ -158,15 +109,12 @@ Email: madniusman13@gmail.com<br/>
 
 <div class="section">
     <div class="eng"><strong>7. Conclusion</strong><br/>
-    CPC theory offers a pressure-based view...</div>
+    CPC theory offers a pressure-based view of the cosmos and predicts catastrophic rupture.</div>
     <div class="urdu"><strong>ترجمہ</strong><br/>
-    CPC نظریہ کائنات کا ایک دباؤ پر مبنی نکتہ نظر پیش کرتا ہے...</div>
+    CPC نظریہ کائنات کا ایک دباؤ پر مبنی نکتہ نظر پیش کرتا ہے اور ایک ممکنہ دھماکے کی پیشگوئی کرتا ہے۔</div>
 </div>
 
-<!-- 🔗 واپس ہوم پر -->
 <p><a href="index.html">🏠 واپس ہوم پیج پر</a></p>
 
 </body>
-</html>
-
 </html>
