--- a/argument.html
+++ b/argument.html
@@ -104,4 +104,16 @@
   </div>
 
 </body>
+  <!DOCTYPE html>
+<html lang="ur">
+<head>
+  <meta charset="UTF-8">
+  <title>دلائل صفحہ</title>
+</head>
+<body>
+  <h1>کائناتی دباؤ اور گھیراؤ – دلائل</h1>
+  <p>یہ صفحہ اس نظریے کے دلائل اور شواہد پیش کرتا ہے...</p>
+</body>
+</html>
+
 </html>
