--- a/urdu.html
+++ b/urdu.html
@@ -117,4 +117,58 @@ Email: madniusman13@gmail.com<br/>
 <p><a href="index.html">🏠 واپس ہوم پیج پر</a></p>
 
 </body>
+    <!DOCTYPE html>
+  </div>
+
+  <div class="section">
+    <h2>5. Matter-Antimatter Asymmetry / مادہ اور اینٹی مادہ کا فرق</h2>
+    <div class="english">After the Big Bang, equal matter and antimatter were expected, but matter dominates. This shows directional control or filtering pressure.</div>
+    <div class="urdu">بیگ بینگ کے بعد مادہ اور اینٹی مادہ برابر مقدار میں ہونے چاہیے تھے، لیکن مادہ غالب ہے۔ یہ کسی دباؤ یا کنٹرول کی نشاندہی کرتا ہے۔</div>
+  </div>
+
+  <div class="section">
+    <h2>6. Quantum Vacuum Pressure / کوانٹم ویکیوم دباؤ</h2>
+    <div class="english">Even vacuum space contains energy that creates pressure. Example: Casimir Effect.</div>
+    <div class="urdu">خلا بھی توانائی رکھتا ہے جو دباؤ پیدا کرتی ہے۔ مثال: کاسیمیر ایفیکٹ۔</div>
+  </div>
+
+  <div class="section">
+    <h2>7. Gravity's Inconsistencies / گریویٹی کی خامیاں</h2>
+    <div class="english">Gravity has not been unified with quantum theory. It may be a large-scale expression of deeper cosmic pressure.</div>
+    <div class="urdu">گریویٹی کو ابھی تک کوانٹم نظریات سے ہم آہنگ نہیں کیا گیا۔ یہ دباؤ کی بڑی سطح پر ظاہری شکل ہو سکتی ہے۔</div>
+  </div>
+
+  <div class="section">
+    <h2>8. Edge of the Universe / کائنات کی سرحد</h2>
+    <div class="english">The universe's limits remain unknown, yet it stays coherent. This hints at outer containment.</div>
+    <div class="urdu">کائنات کی حدود معلوم نہیں، پھر بھی وہ مربوط ہے۔ یہ بیرونی گھیراؤ کی موجودگی ظاہر کرتا ہے۔</div>
+  </div>
+
+  <div class="section">
+    <h2>9. Architectural Analogy / معمارانہ مشابہت</h2>
+    <div class="english">A gas bubble expands by pressure but remains held by its surface — like cosmic containment.</div>
+    <div class="urdu">گیس کا بلبلہ دباؤ سے پھیلتا ہے مگر اس کی سطح اسے قابو میں رکھتی ہے — کائناتی گھیراؤ بھی اسی طرح کام کرتا ہے۔</div>
+  </div>
+
+  <div class="section">
+    <h2>10. Pressure Systems in the Human Body / انسانی جسم میں دباؤ کے نظام</h2>
+    <div class="english">Blood pressure, intracranial pressure, and respiration all depend on balanced pressure — so does nature at large scale.</div>
+    <div class="urdu">انسانی جسم میں خون، دماغ اور سانس کے نظام دباؤ کے توازن سے چلتے ہیں — فطرت کے بڑے نظام بھی اسی اصول پر قائم ہیں۔</div>
+  </div>
+
+</body>
+  <!DOCTYPE html>
+<html lang="ur">
+<head>
+  <meta charset="UTF-8">
+  <title>دلائل صفحہ</title>
+</head>
+<body>
+  <h1>کائناتی دباؤ اور گھیراؤ – دلائل</h1>
+  <p>یہ صفحہ اس نظریے کے دلائل اور شواہد پیش کرتا ہے...</p>
+</body>
+</html>
+
+</html>
+
 </html>
