--- a/arabic.html
+++ b/arabic.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>Argument – Cosmic Theory</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>نظرية الضغط والاحتواء الكوني</title>
   <style>
-    body { font-family: Arial; background: #fdfdfd; margin: 0; }
+    body { font-family: 'Amiri', Arial, sans-serif; background: #fdfdfd; margin: 0; direction: rtl; }
     main { max-width: 900px; margin: auto; padding: 30px; }
+    h1, h2 { color: #2c3e50; }
   </style>
 </head>
 <body>
@@ -17,8 +19,8 @@
     <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
   </header>
   <main>
-    <h2>Main Arguments of CPC Theory</h2>
-    <p>The universe behaves in a way that suggests outer containment and inner pressure, not gravitational collapse.</p>
+    <h1>نظرية الضغط والاحتواء الكوني</h1>
+    <p>الكون يتمدد في جميع الاتجاهات بسرعة شبه موحدة، مما يدل على ضغط خارجي متوازن، وليس فقط الجاذبية.</p>
   </main>
 </body>
 </html>
