--- a/index.html
+++ b/index.html
@@ -1,157 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Cosmic Pressure and Containment</title>
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; }
-    nav { background: #f2f2f2; padding: 10px; text-align: center; margin-bottom: 20px; }
-    nav a { margin: 0 10px; text-decoration: none; color: #333; font-weight: bold; }
-    .button {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: #4285F4;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="urdu.html">اردو</a> |
-    <a href="https://doi.org/10.5281/zenodo.15828369" target="_blank">PDF</a> |
-    <a href="mailto:madniusman13@gmail.com">Contact</a>
-  </nav>
-
-  <h1>Cosmic Pressure and Containment</h1>
-  <p><strong>Author:</strong> Usman Madni</p>
-
-  <h2>Abstract</h2>
-  <p>
-    This paper introduces the Cosmic Pressure and Containment (CPC) theory: a conceptual model
-    suggesting that the universe maintains its structure through internal cosmic pressure balanced
-    by an external containment field. The theory challenges the gravity-exclusive model by proposing
-    that cosmic structure and motion may instead result from internal pressure dynamics restrained by
-    cosmic boundaries or “containment walls.” It explores alternative perspectives on planetary orbits,
-    light bending, and structural equilibrium in space, using analogies from architecture and fluid systems.
-  </p>
-
-  <a class="button" href="https://doi.org/10.5281/zenodo.15828369" target="_blank">📄 Download PDF</a>
-</body>
-<!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cosmic Pressure and Containment</title>
   <style>
-    body {
-      font-family: 'Noto Naskh Arabic', serif;
-      background-color: #ffffff;
-      color: #111;
-      margin: 0;
-      padding: 0;
-      line-height: 1.7;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    section {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-    h2, h3, h4 {
-      color: #2c3e50;
-    }
-    ul {
-      list-style-type: disc;
-      padding-left: 1.5rem;
-    }
+    body { font-family: Arial, sans-serif; background: #fdfdfd; margin: 0; }
+    main { max-width: 900px; margin: auto; padding: 30px; }
+    h1, h2 { color: #2c3e50; }
   </style>
 </head>
 <body>
-
-<header>
-  <h1>کائناتی دباؤ اور گھیراؤ</h1>
-  <h2>Cosmic Pressure and Containment</h2>
-</header>
-
-<section id="expanded-comparison">
-  <h2>Cosmic Pressure and Containment: Expanded Justification and Comparison with Other Theories<br>کائناتی دباؤ اور گھیراؤ: توسیعی دلائل اور دیگر نظریات کے ساتھ تقابلی جائزہ</h2>
-
-  <h3>1. Introduction / تعارف</h3>
-  <p>
-    The Cosmic Pressure and Containment (CPC) theory proposes that the universe is not merely governed by gravitational forces but by a dynamic balance between internal cosmic pressure and an external containment structure. This section elaborates on the arguments supporting this theory, its equations, and a comparative critique of existing models.<br>
-    کائناتی دباؤ اور گھیراؤ (CPC) نظریہ یہ تجویز دیتا ہے کہ کائنات صرف کشش ثقل کے تابع نہیں بلکہ اندرونی دباؤ اور بیرونی گھیراؤ کے درمیان ایک متحرک توازن سے چلتی ہے۔ یہ حصہ اس نظریہ کے دلائل، مساوات اور دیگر نظریات کے مقابلے کا جائزہ پیش کرتا ہے۔
-  </p>
-
-  <h3>2. Core Arguments in Favor of the CPC Theory<br>2. CPC نظریہ کے حق میں بنیادی دلائل</h3>
-
-  <h4>2.1. Expansion of the Universe Challenges Gravity<br>2.1. کائنات کا پھیلاؤ کششِ ثقل کو چیلنج کرتا ہے</h4>
-  <p>
-    According to General Relativity, gravity should cause matter to attract and collapse over time. However, distant galaxies are accelerating away (based on redshift data), which contradicts pure gravitational pull. CPC theory explains this as the result of increasing internal pressure pushing the universe outward, similar to a balloon expanding.<br>
-    آئن سٹائن کی نظریہ اضافیت کے مطابق، کششِ ثقل مادے کو کھینچ کر بالآخر سکیڑنا چاہیے۔ لیکن مشاہدات کے مطابق دور دراز کہکشائیں دور ہوتی جا رہی ہیں (ریڈ شفٹ ڈیٹا کی بنیاد پر)، جو کششِ ثقل کے برعکس ہے۔ CPC نظریہ اسے اندرونی دباؤ کے اضافے کے نتیجے میں پھیلاؤ سے تعبیر کرتا ہے، جیسے غبارہ پھولتا ہے۔
-  </p>
-
-  <h4>2.2. Cosmic Structure Resemblance to Architectural Containment<br>2.2. کائناتی ساخت اور تعمیراتی گھیراؤ میں مشابہت</h4>
-  <p>
-    Galaxies seem to form filamentary structures and voids, resembling tension-compression balances in architecture. This pattern aligns with pressure-based equilibrium rather than free gravitational clustering.<br>
-    کہکشائیں ایسے ڈھانچوں میں ترتیب پاتی ہیں جو تعمیراتی ڈیزائن میں کھنچاؤ اور دباؤ کے توازن جیسے ہوتے ہیں۔ یہ نمونہ دباؤ پر مبنی توازن کے مطابق ہے، نہ کہ صرف کششِ ثقل سے۔
-  </p>
-
-  <h3>3. Conceptual Equations / نظریاتی مساوات</h3>
-
-  <h4>3.1. Pressure-Containment Equilibrium / دباؤ-گھیراؤ توازن</h4>
-  <p>
-    Let: P<sub>i</sub> = Internal cosmic pressure, F<sub>c</sub> = Containment field force per unit area, A = Area across a boundary surface, E<sub>s</sub> = Structural energy stored in containment.<br>
-    تصور کریں: P<sub>i</sub> = اندرونی کائناتی دباؤ، F<sub>c</sub> = گھیراؤ کی قوت فی یونٹ رقبہ، A = سطحی رقبہ، E<sub>s</sub> = گھیراؤ میں ذخیرہ شدہ توانائی۔<br>
-    Then equilibrium condition: P<sub>i</sub> * A = F<sub>c</sub> * A → P<sub>i</sub> = F<sub>c</sub><br>
-    تو توازن کی حالت: P<sub>i</sub> * A = F<sub>c</sub> * A → P<sub>i</sub> = F<sub>c</sub>
-  </p>
-
-  <h4>3.2. Orbital Pressure Zone / مداری دباؤ کا علاقہ</h4>
-  <p>
-    P<sub>r</sub>(r) = P<sub>0</sub> / (1 + k · r²) → Stable orbits where dP<sub>r</sub>/dr ≈ 0<br>
-    P<sub>r</sub>(r) = P<sub>0</sub> / (1 + k · r²) → مستحکم مدار جہاں dP<sub>r</sub>/dr تقریباً 0 ہو
-  </p>
-
-  <h4>3.3. Redshift from Pressure Gradient / دباؤ کے تغیر سے ریڈ شفٹ</h4>
-  <p>
-    Δλ ∝ ∇P · d, where Δλ is the shift in wavelength, ∇P is the pressure gradient, and d is the distance traversed.<br>
-    Δλ ∝ ∇P · d، جہاں Δλ طول موج میں تبدیلی ہے، ∇P دباؤ کا تغیر ہے، اور d فاصلہ ہے۔
-  </p>
-
-  <h3>4. Shortcomings of Mainstream Theories / مرکزی دھارے کے نظریات کی کمزوریاں</h3>
-
-  <ul>
-    <li><strong>4.1. General Relativity / عمومی نظریہ اضافیت:</strong> Fails to explain accelerated expansion without 'dark energy'. Predicts singularities that lead to infinite density.<br>تیز پھیلاؤ کی وضاحت 'ڈارک انرجی' کے بغیر نہیں کر سکتا۔ ایسے سنگولیرٹیز کی پیش گوئی کرتا ہے جن میں کثافت لامحدود ہو جاتی ہے۔</li>
-    <li><strong>4.2. Newtonian Gravity / نیوٹونی کششِ ثقل:</strong> Ignores relativistic and pressure-based interactions; invalid at cosmic scales.<br>نسبیتی اور دباؤ پر مبنی تعاملات کو نظر انداز کرتا ہے؛ کائناتی پیمانے پر قابلِ عمل نہیں۔</li>
-    <li><strong>4.3. Dark Energy and Inflation Models / ڈارک انرجی اور پھیلاؤ کے نظریات:</strong> Speculative and require unseen entities to balance equations.<br>قیاسی ہیں اور مساوات کو متوازن رکھنے کے لیے غیر مرئی عناصر کی ضرورت ہوتی ہے۔</li>
-    <li><strong>4.4. String Theory / Quantum Gravity / سٹرنگ تھیوری / کوانٹم گریوٹی:</strong> Complex and lacks experimental proof; no practical pressure interpretation.<br>پیچیدہ ہے اور تجرباتی ثبوت سے خالی؛ دباؤ کی کوئی عملی وضاحت نہیں دیتی۔</li>
-  </ul>
-
-  <h3>5. Advantages of CPC Theory / CPC نظریہ کی خوبیاں</h3>
-  <p>
-    Explains expansion without dark energy. No singularities. Uses real-world analogies from architecture and fluid dynamics.<br>
-    بغیر ڈارک انرجی کے پھیلاؤ کی وضاحت کرتا ہے۔ کوئی سنگولیرٹی نہیں۔ تعمیرات اور سیال حرکیات جیسے حقیقی مظاہر سے مثالیں لیتا ہے۔
-  </p>
-
-  <h3>6. Conclusion / نتیجہ</h3>
-  <p>
-    CPC theory offers a pressure-based model to explain the universe's structure and motion, avoiding the limitations of gravity-only models.<br>
-    CPC نظریہ کائنات کی ساخت اور حرکت کی وضاحت کے لیے ایک دباؤ پر مبنی ماڈل پیش کرتا ہے، جو صرف کششِ ثقل پر مبنی ماڈلز کی کمزوریوں سے پاک ہے۔
-  </p>
-</section>
-
+  <header style="background:#2c3e50; padding:15px; text-align:center;">
+    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
+    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
+    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
+    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
+    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  </header>
+  <main>
+    <h1>Cosmic Pressure and Containment Theory</h1>
+    <p>The universe expands in all directions with near-uniform speed. This suggests an external, symmetrical pressure — not just gravity.</p>
+  </main>
 </body>
-</html>
-
-  
 </html>
