--- a/urdu-argument.html
+++ b/urdu-argument.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ur" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>Argument – Cosmic Theory</title>
+  <title>دلیل – نظریہ دباؤ</title>
   <style>
-    body { font-family: Arial; background: #fdfdfd; margin: 0; }
+    body { font-family: 'Noto Naskh Arabic', Arial; background: #fdfdfd; margin: 0; direction: rtl; }
     main { max-width: 900px; margin: auto; padding: 30px; }
   </style>
 </head>
@@ -17,8 +17,8 @@
     <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
   </header>
   <main>
-    <h2>Main Arguments of CPC Theory</h2>
-    <p>The universe behaves in a way that suggests outer containment and inner pressure, not gravitational collapse.</p>
+    <h2>نظریہ دباؤ کی بنیادی دلیلیں</h2>
+    <p>کائنات کا پھیلاؤ، دباؤ اور گھیراؤ کے ساتھ مطابقت رکھتا ہے، ناکہ کششِ ثقل سے سکیڑنے کے نظریے کے ساتھ۔</p>
   </main>
 </body>
 </html>
