--- a/urdu.html
+++ b/urdu.html
@@ -1,174 +1,26 @@
 <!DOCTYPE html>
 <html lang="ur" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <title>کائناتی دباؤ اور گھیراؤ</title>
-    <style>
-        body {
-            font-family: "Noto Nastaliq Urdu", serif;
-            background-color: #0a0a1a;
-            color: #eee;
-            padding: 20px;
-            line-height: 1.6;
-        }
-        h1, h2 {
-            color: #f0a500;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-        }
-        .section {
-            margin-bottom: 30px;
-        }
-        .urdu {
-            direction: rtl;
-            text-align: right;
-            font-size: 1.2em;
-            white-space: normal;
-            overflow: visible;
-            display: block;
-        }
-        .eng {
-            direction: ltr;
-            text-align: left;
-            font-size: 1em;
-            color: #ccc;
-            margin-bottom: 15px;
-        }
-        a {
-            color: #00ffff;
-            font-size: 1.1em;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>کائناتی دباؤ اور گھیراؤ</title>
+  <style>
+    body { font-family: 'Noto Naskh Arabic', Arial, sans-serif; background: #fdfdfd; margin: 0; direction: rtl; }
+    main { max-width: 900px; margin: auto; padding: 30px; }
+    h1, h2 { color: #2c3e50; }
+  </style>
 </head>
 <body>
-
-<p><a href="index.html">🏠 واپس ہوم پیج پر</a></p>
-
-<h1>کائناتی دباؤ اور گھیراؤ: ایک مفروضاتی خاکہ</h1>
-<p>Usman Madni / عثمان مدنی<br/>
-آزاد محقق، پاکستان<br/>
-Email: madniusman13@gmail.com<br/>
-© 2025 Usman Madni. All rights reserved.</p>
-
-<img src="images/d65228bd-7717-44f3-b988-ad2c80e550fa.png" alt="Cosmic Pressure and Containment Diagram" />
-
-<div class="section">
-    <div class="eng"><strong>Abstract</strong><br/>
-    This paper introduces the Cosmic Pressure and Containment (CPC) theory, a conceptual model proposing that the universe maintains its structure through a balance of internal cosmic pressure and an external containment field.</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    یہ مقالہ 'کائناتی دباؤ اور گھیراؤ' (CPC) کے نظریے کو پیش کرتا ہے جو اس تصور پر مبنی ہے کہ کائنات اپنی ساخت کو اندرونی کائناتی دباؤ اور بیرونی گھیراؤ کی قوت کے توازن سے قائم رکھتی ہے۔</div>
-</div>
-
-<div class="section">
-    <div class="eng"><strong>1. Introduction</strong><br/>
-    Modern cosmology largely attributes cosmic structure and dynamics to gravitational forces. However, observational anomalies motivate alternative models.</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    روایتی فلکیات کے مطابق کائنات کی ساخت اور حرکت کششِ ثقل کے قوانین سے چلتی ہے۔ تاہم کچھ مشاہدات متبادل نظریات کی ضرورت ظاہر کرتے ہیں۔</div>
-</div>
-
-<div class="section">
-    <div class="eng"><strong>2. The Cosmic Rupture</strong><br/>
-    If the internal pressure exceeds the containment capacity, a rupture may occur, dispersing stars and galaxies.</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    اگر اندرونی دباؤ بیرونی قوتِ گھیراؤ سے بڑھ جائے تو ایک زوردار دھماکہ ہو سکتا ہے جو ستاروں اور کہکشاؤں کو بکھیر دے گا۔</div>
-</div>
-
-<div class="section">
-    <div class="eng"><strong>3. First Effect: Ocean</strong><br/>
-    Earth’s oceans will be the first to respond due to their incompressible nature.</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    زمین کے سمندر سب سے پہلے ردعمل دیں گے کیونکہ پانی غیر سکڑنے والا ہے۔</div>
-</div>
-
-<div class="section">
-    <div class="eng"><strong>4. Suspended Objects</strong><br/>
-    Space bodies are suspended not just by gravity but by a balance of cosmic pressure.</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    خلا میں اجسام صرف کششِ ثقل سے نہیں بلکہ دباؤ کے توازن سے معلق ہوتے ہیں۔</div>
-</div>
-
-<div class="section">
-    <div class="eng"><strong>5. Light and Pressure</strong><br/>
-    Light is influenced by cosmic pressure; its speed and path are not constant.</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    روشنی پر کائناتی دباؤ اثر انداز ہوتا ہے؛ اس کی رفتار اور سمت مستقل نہیں۔</div>
-</div>
-
-<div class="section">
-    <div class="eng"><strong>6. Equations and Diagram</strong><br/>
-    Pc = Fc<br/>
-    R(t) ∝ √(Pc - Fc)</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    Pc = Fc<br/>
-    R(t) ∝ √(Pc - Fc)</div>
-</div>
-
-<div class="section">
-    <div class="eng"><strong>7. Conclusion</strong><br/>
-    CPC theory offers a pressure-based view of the cosmos and predicts catastrophic rupture.</div>
-    <div class="urdu"><strong>ترجمہ</strong><br/>
-    CPC نظریہ کائنات کا ایک دباؤ پر مبنی نکتہ نظر پیش کرتا ہے اور ایک ممکنہ دھماکے کی پیشگوئی کرتا ہے۔</div>
-</div>
-
-<p><a href="index.html">🏠 واپس ہوم پیج پر</a></p>
-
+  <header style="background:#2c3e50; padding:15px; text-align:center;">
+    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
+    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
+    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
+    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
+    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  </header>
+  <main>
+    <h1>کائناتی دباؤ اور گھیراؤ</h1>
+    <p>کائنات چاروں طرف سے ایک جیسے دباؤ میں پھیل رہی ہے، جو کسی توازن والی بیرونی قوت کی دلیل ہے، نہ کہ صرف کششِ ثقل۔</p>
+  </main>
 </body>
-    <!DOCTYPE html>
-  </div>
-
-  <div class="section">
-    <h2>5. Matter-Antimatter Asymmetry / مادہ اور اینٹی مادہ کا فرق</h2>
-    <div class="english">After the Big Bang, equal matter and antimatter were expected, but matter dominates. This shows directional control or filtering pressure.</div>
-    <div class="urdu">بیگ بینگ کے بعد مادہ اور اینٹی مادہ برابر مقدار میں ہونے چاہیے تھے، لیکن مادہ غالب ہے۔ یہ کسی دباؤ یا کنٹرول کی نشاندہی کرتا ہے۔</div>
-  </div>
-
-  <div class="section">
-    <h2>6. Quantum Vacuum Pressure / کوانٹم ویکیوم دباؤ</h2>
-    <div class="english">Even vacuum space contains energy that creates pressure. Example: Casimir Effect.</div>
-    <div class="urdu">خلا بھی توانائی رکھتا ہے جو دباؤ پیدا کرتی ہے۔ مثال: کاسیمیر ایفیکٹ۔</div>
-  </div>
-
-  <div class="section">
-    <h2>7. Gravity's Inconsistencies / گریویٹی کی خامیاں</h2>
-    <div class="english">Gravity has not been unified with quantum theory. It may be a large-scale expression of deeper cosmic pressure.</div>
-    <div class="urdu">گریویٹی کو ابھی تک کوانٹم نظریات سے ہم آہنگ نہیں کیا گیا۔ یہ دباؤ کی بڑی سطح پر ظاہری شکل ہو سکتی ہے۔</div>
-  </div>
-
-  <div class="section">
-    <h2>8. Edge of the Universe / کائنات کی سرحد</h2>
-    <div class="english">The universe's limits remain unknown, yet it stays coherent. This hints at outer containment.</div>
-    <div class="urdu">کائنات کی حدود معلوم نہیں، پھر بھی وہ مربوط ہے۔ یہ بیرونی گھیراؤ کی موجودگی ظاہر کرتا ہے۔</div>
-  </div>
-
-  <div class="section">
-    <h2>9. Architectural Analogy / معمارانہ مشابہت</h2>
-    <div class="english">A gas bubble expands by pressure but remains held by its surface — like cosmic containment.</div>
-    <div class="urdu">گیس کا بلبلہ دباؤ سے پھیلتا ہے مگر اس کی سطح اسے قابو میں رکھتی ہے — کائناتی گھیراؤ بھی اسی طرح کام کرتا ہے۔</div>
-  </div>
-
-  <div class="section">
-    <h2>10. Pressure Systems in the Human Body / انسانی جسم میں دباؤ کے نظام</h2>
-    <div class="english">Blood pressure, intracranial pressure, and respiration all depend on balanced pressure — so does nature at large scale.</div>
-    <div class="urdu">انسانی جسم میں خون، دماغ اور سانس کے نظام دباؤ کے توازن سے چلتے ہیں — فطرت کے بڑے نظام بھی اسی اصول پر قائم ہیں۔</div>
-  </div>
-
-</body>
-  <!DOCTYPE html>
-<html lang="ur">
-<head>
-  <meta charset="UTF-8">
-  <title>دلائل صفحہ</title>
-</head>
-<body>
-  <h1>کائناتی دباؤ اور گھیراؤ – دلائل</h1>
-  <p>یہ صفحہ اس نظریے کے دلائل اور شواہد پیش کرتا ہے...</p>
-</body>
-</html>
-
-</html>
-
 </html>
