--- a/arabic.html
+++ b/arabic.html
@@ -1,26 +1,22 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>نظرية الضغط والاحتواء الكوني</title>
-  <style>
-    body { font-family: 'Amiri', Arial, sans-serif; background: #fdfdfd; margin: 0; direction: rtl; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-    h1, h2 { color: #2c3e50; }
-  </style>
+  <meta charset="UTF-8">
+  <title>الضغط الكوني - العربية</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  <header>
+    <a href="index.html">English</a> |
+    <a href="urdu.html">اردو</a> |
+    <a href="arabic.html">العربية</a> |
+    <a href="argument.html">Argument</a> |
+    <a href="urdu-argument.html">دلیل (اردو)</a>
   </header>
   <main>
-    <h1>نظرية الضغط والاحتواء الكوني</h1>
-    <p>الكون يتمدد في جميع الاتجاهات بسرعة شبه موحدة، مما يدل على ضغط خارجي متوازن، وليس فقط الجاذبية.</p>
+    <h1>نظرية الضغط الكوني والاحتواء</h1>
+    <p>هذا هو النسخة العربية من النظرية الكاملة.</p>
   </main>
 </body>
 </html>
