--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cosmic Pressure and Containment</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #fdfdfd; margin: 0; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-    h1, h2 { color: #2c3e50; }
-  </style>
+  <meta charset="UTF-8">
+  <title>Cosmic Pressure - English</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  <header>
+    <a href="index.html">English</a> |
+    <a href="urdu.html">اردو</a> |
+    <a href="arabic.html">العربية</a> |
+    <a href="argument.html">Argument</a> |
+    <a href="urdu-argument.html">دلیل (اردو)</a>
   </header>
   <main>
-    <h1>Cosmic Pressure and Containment Theory</h1>
-    <p>The universe expands in all directions with near-uniform speed. This suggests an external, symmetrical pressure — not just gravity.</p>
+    <h1>Cosmic Pressure and Containment</h1>
+    <p>This is the English version of the complete theory including extended arguments and scientific comparison.</p>
   </main>
 </body>
 </html>
