--- a/index.html
+++ b/index.html
@@ -19,4 +19,31 @@
     <p>This is the English version of the complete theory including extended arguments and scientific comparison.</p>
   </main>
 </body>
+  <!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cosmic Pressure and Containment</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #fdfdfd; margin: 0; }
+    main { max-width: 900px; margin: auto; padding: 30px; }
+    h1, h2 { color: #2c3e50; }
+  </style>
+</head>
+<body>
+  <header style="background:#2c3e50; padding:15px; text-align:center;">
+    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
+    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
+    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
+    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
+    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  </header>
+  <main>
+    <h1>Cosmic Pressure and Containment Theory</h1>
+    <p>The universe expands in all directions with near-uniform speed. This suggests an external, symmetrical pressure — not just gravity.</p>
+  </main>
+</body>
+</html>
+
 </html>
