--- a/urdu-argument.html
+++ b/urdu-argument.html
@@ -19,4 +19,31 @@
     <p>اس صفحے پر CPC نظریہ کے سائنسی دلائل درج ہیں۔</p>
   </main>
 </body>
+  <!DOCTYPE html>
+<html lang="ur" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>کائناتی دباؤ اور گھیراؤ</title>
+  <style>
+    body { font-family: 'Noto Naskh Arabic', Arial, sans-serif; background: #fdfdfd; margin: 0; direction: rtl; }
+    main { max-width: 900px; margin: auto; padding: 30px; }
+    h1, h2 { color: #2c3e50; }
+  </style>
+</head>
+<body>
+  <header style="background:#2c3e50; padding:15px; text-align:center;">
+    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
+    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
+    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
+    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
+    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  </header>
+  <main>
+    <h1>کائناتی دباؤ اور گھیراؤ</h1>
+    <p>کائنات چاروں طرف سے ایک جیسے دباؤ میں پھیل رہی ہے، جو کسی توازن والی بیرونی قوت کی دلیل ہے، نہ کہ صرف کششِ ثقل۔</p>
+  </main>
+</body>
+</html>
+
 </html>
