--- a/argument.html
+++ b/argument.html
@@ -19,4 +19,29 @@
     <p>This page outlines the scientific reasoning behind the CPC theory.</p>
   </main>
 </body>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Argument – Cosmic Theory</title>
+  <style>
+    body { font-family: Arial; background: #fdfdfd; margin: 0; }
+    main { max-width: 900px; margin: auto; padding: 30px; }
+  </style>
+</head>
+<body>
+  <header style="background:#2c3e50; padding:15px; text-align:center;">
+    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
+    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
+    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
+    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
+    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  </header>
+  <main>
+    <h2>Main Arguments of CPC Theory</h2>
+    <p>The universe behaves in a way that suggests outer containment and inner pressure, not gravitational collapse.</p>
+  </main>
+</body>
+</html>
+
 </html>
