--- a/urdu-argument.html
+++ b/urdu-argument.html
@@ -44,6 +44,31 @@
     <p>کائنات چاروں طرف سے ایک جیسے دباؤ میں پھیل رہی ہے، جو کسی توازن والی بیرونی قوت کی دلیل ہے، نہ کہ صرف کششِ ثقل۔</p>
   </main>
 </body>
+  <!DOCTYPE html>
+<html lang="ur" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <title>دلیل – نظریہ دباؤ</title>
+  <style>
+    body { font-family: 'Noto Naskh Arabic', Arial; background: #fdfdfd; margin: 0; direction: rtl; }
+    main { max-width: 900px; margin: auto; padding: 30px; }
+  </style>
+</head>
+<body>
+  <header style="background:#2c3e50; padding:15px; text-align:center;">
+    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
+    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
+    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
+    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
+    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
+  </header>
+  <main>
+    <h2>نظریہ دباؤ کی بنیادی دلیلیں</h2>
+    <p>کائنات کا پھیلاؤ، دباؤ اور گھیراؤ کے ساتھ مطابقت رکھتا ہے، ناکہ کششِ ثقل سے سکیڑنے کے نظریے کے ساتھ۔</p>
+  </main>
+</body>
+</html>
+
 </html>
 
 </html>
