--- a/index.html
+++ b/index.html
@@ -1,49 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cosmic Pressure - English</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Cosmic Pressure and Containment</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <a href="index.html">English</a> |
     <a href="urdu.html">اردو</a> |
     <a href="arabic.html">العربية</a> |
-    <a href="argument.html">Argument</a> |
-    <a href="urdu-argument.html">دلیل (اردو)</a>
+    <a href="argument.html">Scientific Argument</a> |
+    <a href="urdu-argument.html">دلائل (اردو)</a>
   </header>
-  <main>
-    <h1>Cosmic Pressure and Containment</h1>
-    <p>This is the English version of the complete theory including extended arguments and scientific comparison.</p>
-  </main>
-</body>
-  <!DOCTYPE html>
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cosmic Pressure and Containment</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #fdfdfd; margin: 0; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-    h1, h2 { color: #2c3e50; }
-  </style>
-</head>
-<body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h1>Cosmic Pressure and Containment Theory</h1>
-    <p>The universe expands in all directions with near-uniform speed. This suggests an external, symmetrical pressure — not just gravity.</p>
-  </main>
-</body>
-</html>
 
+  <main>
+    <h1>Cosmic Pressure and Containment: A Hypothetical Framework</h1>
+    <p><strong>Author:</strong> Usman Madni<br>
+    <strong>Email:</strong> madniusman13@gmail.com<br>
+    <strong>© 2025 Usman Madni. All rights reserved.</strong></p>
+
+    <h2>Abstract</h2>
+    <p>This theory proposes that the universe maintains its structure through a balance of internal cosmic pressure and an external containment force. It explains cosmic expansion, photon behavior, and structural stability without invoking dark energy or singularities.</p>
+
+    <h2>1. Introduction</h2>
+    <p>Modern cosmology heavily relies on gravity. However, observations like accelerating expansion and large-scale structure demand alternative explanations. CPC theory posits that internal pressure and external containment govern cosmic behavior.</p>
+
+    <h2>2. The Cosmic Rupture</h2>
+    <p>Just like a balloon bursts when internal pressure exceeds containment, the universe could face a rupture. Such an event would destabilize galaxies, stars, and even atomic structure.</p>
+
+    <h2>3. Oceans: First Responders</h2>
+    <p>Due to water's incompressibility, Earth's oceans would react first in a rupture scenario, possibly leading to global catastrophe.</p>
+
+    <h2>4. Orbital Suspension</h2>
+    <p>Instead of gravity alone, cosmic pressure maintains orbital positions of celestial bodies by balancing containment and pressure forces.</p>
+
+    <h2>5. Light & Pressure</h2>
+    <p>Photon behavior — redshift, bending, speed — is influenced by pressure gradients, not only gravity.</p>
+
+    <h2>6. Theoretical Equations</h2>
+    <ul>
+      <li><strong>Pressure-Containment Balance:</strong> Pi × A = Fc × A → Pi = Fc</li>
+      <li><strong>Orbital Zones:</strong> Pr(r) = P₀ / (1 + kr²), where dPr/dr ≈ 0 → stable orbits</li>
+      <li><strong>Redshift:</strong> Δλ ∝ ∇P · d</li>
+    </ul>
+
+    <h2>7. Critique of Other Theories</h2>
+    <ul>
+      <li>General Relativity predicts singularities and needs dark energy</li>
+      <li>Newtonian gravity fails at cosmic scales</li>
+      <li>Dark energy models are speculative</li>
+      <li>String theory lacks empirical grounding</li>
+    </ul>
+
+    <h2>8. Conclusion</h2>
+    <p>CPC Theory provides a new paradigm for understanding the universe through dynamic pressure and structural containment — without resorting to invisible forces.</p>
+
+    <h2>References</h2>
+    <ol>
+      <li>Misner, Thorne & Wheeler (1973) – Gravitation</li>
+      <li>Riess et al. (1998) – Accelerating Universe</li>
+      <li>Verlinde (2017) – Emergent Gravity</li>
+      <li>Planck Mission Data</li>
+    </ol>
+  </main>
+</body>
 </html>
